--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Project</title>
+    <title>API Project 2</title>
 </head>
 <body>
     <h1>"Hello World 3"</h1>
