--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Project</title>
+    <title>Cat Facts API Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>"Hello World"</h1>
+    <div class="quote bubble"></div>
+    
+    <div id="cat">
+        <img id="mainCat" src="./assets/kisspng-black-cat-kitten-clip-art-fat-cat-5aa6fe48463161.4156418015208935122875.png" alt="Fat Cat!">
+    </div>
+    <section>
+        <main>
+            <div class="quoteBubble">
+                <!-- info from API will go here -->
+            </div>
+        </main>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
