--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="quote bubble"></div>
-    
+<!-- <p class="sampleFont"> Hello I am a Cool Font</p>
+<p class="sampleFont2"> Cool Other Font </p>
+<p class="sampleFont3"> Cat Facts, Bitches </p> -->
+
+    <section class="tooltip">
+        <p class="quoteBubble"></p>
+    </section>
+
     <div id="cat">
         <img id="mainCat" src="./assets/kisspng-black-cat-kitten-clip-art-fat-cat-5aa6fe48463161.4156418015208935122875.png" alt="Fat Cat!">
     </div>
-    <section>
-        <main>
-            <div class="quoteBubble">
-                <!-- info from API will go here -->
-            </div>
-        </main>
-    </section>
-    <script src="script.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
